--- a/package.json
+++ b/package.json
@@ -10,16 +10,12 @@
     "test": "node tests/runner.js && ./node_modules/.bin/eslint index.js lib/* tests/*"
   },
   "repository": "https://github.com/ember-cli-deploy/ember-cli-deploy-revision-data",
-  "engines": {
-    "node": ">= 4"
-  },
   "author": "Aaron Chambers and the ember-cli-deploy team",
   "license": "MIT",
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "ember-cli": "^2.12.0",
-    "ember-cli-release": "1.0.0-beta.2",
+    "ember-cli": "3.22.0",
     "eslint": "^3.18.0",
     "github": "^2.5.1",
     "glob": "^7.1.1",
@@ -33,10 +29,10 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "core-object": "^2.0.6",
-    "ember-cli-deploy-plugin": "^0.2.6",
-    "git-repo-info": "^1.3.0",
+    "ember-cli-deploy-plugin": "^0.2.9",
+    "git-repo-info": "2.1.1",
     "minimatch": "^3.0.3",
     "rsvp": "^3.5.0",
-    "simple-git": "^1.57.0"
+    "simple-git": "2.22.0"
   }
 }
